tests/baselines/reference/stringIndexerConstrainsPropertyDeclarations.errors.txt
stringIndexerConstrainsPropertyDeclarations.ts(13,5): error TS2411: Property 'b' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(14,5): error TS2411: Property 'c' of type '() => {}' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(16,5): error TS2411: Property '"e"' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(18,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(20,5): error TS2411: Property '"4.0"' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(21,5): error TS2411: Property 'f' of type 'MyString' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(28,5): error TS2411: Property 'foo' of type '() => string' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(45,5): error TS2411: Property 'b' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(46,5): error TS2411: Property 'c' of type '() => {}' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(48,5): error TS2411: Property '"e"' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(50,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(53,5): error TS2411: Property 'foo' of type '() => string' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(55,5): error TS2411: Property '"4.0"' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(56,5): error TS2411: Property 'f' of type 'MyString' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(63,5): error TS2411: Property 'b' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(64,5): error TS2411: Property 'c' of type '() => {}' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(66,5): error TS2411: Property '"e"' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(68,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(71,5): error TS2411: Property 'foo' of type '() => string' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(73,5): error TS2411: Property '"4.0"' of type 'number' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(74,5): error TS2411: Property 'f' of type 'MyString' is not assignable to 'string' index type 'string'.
stringIndexerConstrainsPropertyDeclarations.ts(78,35): error TS2322: Type '{ a: string; b: number; c: () => void; d: string; e: number; 1: string; 2: number; "3.0": string; "4.0": number; f: MyString; X: string; foo(): string; }' is not assignable to type '{ [x: string]: string; }'.
  Property 'b' is incompatible with index signature.
    Type 'number' is not assignable to type 'string'.


==== stringIndexerConstrainsPropertyDeclarations.ts (22 errors) ====
    // String indexer types constrain the types of named properties in their containing type
    
    interface MyString extends String {
        foo: number;
    }
    
    class C {
        [x: string]: string;
    
        constructor() { } // ok
    
        a: string; // ok
        b: number; // error
        ~
!!! error TS2411: Property 'b' of type 'number' is not assignable to 'string' index type 'string'.
        c: () => {} // error
        ~
!!! error TS2411: Property 'c' of type '() => {}' is not assignable to 'string' index type 'string'.
        "d": string; // ok
        "e": number; // error
        ~~~
!!! error TS2411: Property '"e"' of type 'number' is not assignable to 'string' index type 'string'.
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'string' index type 'string'.
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~
!!! error TS2411: Property '"4.0"' of type 'number' is not assignable to 'string' index type 'string'.
        f: MyString; // error
        ~
!!! error TS2411: Property 'f' of type 'MyString' is not assignable to 'string' index type 'string'.
    
        get X() { // ok
            return '';
        }
        set X(v) { } // ok
    
        foo() { // error
        ~~~
!!! error TS2411: Property 'foo' of type '() => string' is not assignable to 'string' index type 'string'.
            return '';
        }
    
        static sa: number; // ok
        static sb: string; // ok
    
        static foo() { } // ok
        static get X() { // ok
            return 1;
        }
    }
    
    interface I {
        [x: string]: string;
    
        a: string; // ok
        b: number; // error
        ~
!!! error TS2411: Property 'b' of type 'number' is not assignable to 'string' index type 'string'.
        c: () => {} // error
        ~
!!! error TS2411: Property 'c' of type '() => {}' is not assignable to 'string' index type 'string'.
        "d": string; // ok
        "e": number; // error
        ~~~
!!! error TS2411: Property '"e"' of type 'number' is not assignable to 'string' index type 'string'.
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'string' index type 'string'.
        (): string; // ok
        (x): number // ok
        foo(): string; // error
        ~~~~~~~~~~~~~~
!!! error TS2411: Property 'foo' of type '() => string' is not assignable to 'string' index type 'string'.
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~
!!! error TS2411: Property '"4.0"' of type 'number' is not assignable to 'string' index type 'string'.
        f: MyString; // error
        ~
!!! error TS2411: Property 'f' of type 'MyString' is not assignable to 'string' index type 'string'.
    }
    
    var a: {
        [x: string]: string;
    
        a: string; // ok
        b: number; // error
        ~
!!! error TS2411: Property 'b' of type 'number' is not assignable to 'string' index type 'string'.
        c: () => {} // error
        ~
!!! error TS2411: Property 'c' of type '() => {}' is not assignable to 'string' index type 'string'.
        "d": string; // ok
        "e": number; // error
        ~~~
!!! error TS2411: Property '"e"' of type 'number' is not assignable to 'string' index type 'string'.
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'string' index type 'string'.
        (): string; // ok
        (x): number // ok
        foo(): string; // error
        ~~~~~~~~~~~~~~
!!! error TS2411: Property 'foo' of type '() => string' is not assignable to 'string' index type 'string'.
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~
!!! error TS2411: Property '"4.0"' of type 'number' is not assignable to 'string' index type 'string'.
        f: MyString; // error
        ~
!!! error TS2411: Property 'f' of type 'MyString' is not assignable to 'string' index type 'string'.
    }
    
    // error
    var b: { [x: string]: string; } = {
                                      ~
        a: '',
    ~~~~~~~~~~
        b: 1, 
    ~~~~~~~~~~
        c: () => { }, 
    ~~~~~~~~~~~~~~~~~~
        "d": '', 
    ~~~~~~~~~~~~~
        "e": 1, 
    ~~~~~~~~~~~~
        1.0: '',
    ~~~~~~~~~~~~
        2.0: 1, 
    ~~~~~~~~~~~~
        "3.0": '', 
    ~~~~~~~~~~~~~~~
        "4.0": 1, 
    ~~~~~~~~~~~~~~
        f: <MyString>null, 
    ~~~~~~~~~~~~~~~~~~~~~~~
    
    
        get X() { 
    ~~~~~~~~~~~~~~
            return '';
    ~~~~~~~~~~~~~~~~~~
        },
    ~~~~~~
        set X(v) { }, 
    ~~~~~~~~~~~~~~~~~~
        foo() { 
    ~~~~~~~~~~~~
            return '';
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    }
    ~
!!! error TS2322: Type '{ a: string; b: number; c: () => void; d: string; e: number; 1: string; 2: number; "3.0": string; "4.0": number; f: MyString; X: string; foo(): string; }' is not assignable to type '{ [x: string]: string; }'.
!!! error TS2322:   Property 'b' is incompatible with index signature.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.